Align modal image fixes

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -779,26 +779,22 @@ header {
 .modal-body .img-fluid {
 
     max-width: 300px;
-    height: 380px;
+    height: auto;
     object-fit: cover;
     float: left;
     border-radius: 3%;
     position: relative;
+    
 
 }
 
 // Unique Modal Image centering style 
 
-#bianca-img {
-    margin-top: 50px;
-}
-
-#april-img {
-    margin-top: 55px;
-}
-
-#gina-img {
-    margin-top: 20px;
+#modal-align {
+    top: calc(50% - 100px);
+    transform: translateY(+0%);
+    -webkit-transform: translateY(-25%);
+    -moz-transform: translateY(+0%);
 }
 .container-fluid {
     padding: 25px;
@@ -818,6 +814,18 @@ header {
         height: 300px;
         width: 100%;
     }
+
+    // #modal-align {
+    //     position: relative;
+    //     top: calc(50% - 25px);
+    //     top: -moz-calc(50% - 25px);
+    //     top: -webkit-calc(50% - 25px);
+    //     transform: translateY(-50%);
+    //     -webkit-transform: translateY(-50%);
+    //     -moz-transform: translateY(-50%);
+
+    // }
+
 
 }
 
